--- a/package.json
+++ b/package.json
@@ -10,18 +10,25 @@
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.3",
+    "@expo/vector-icons": "^14.0.2",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "@react-navigation/stack": "^6.4.1",
     "@realm/react": "^0.10.1",
     "@tanstack/react-query": "^5.55.0",
     "axios": "^1.7.7",
     "expo": "~51.0.28",
+    "expo-dev-client": "~4.0.26",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-screens": "3.31.1",
     "react-query": "^3.39.3",
     "realm": "^12.13.1",
     "styled-components": "^6.1.13",
-    "expo-dev-client": "~4.0.26"
+    "react-native-safe-area-context": "4.10.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
