--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-query": "^3.39.3",
     "realm": "^12.13.1",
-    "styled-components": "^6.1.13",
-    "react-native-safe-area-context": "4.10.5"
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
