--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-EXPO_PUBLIC_API_BASE_URL=http://challenge-front-end.bovcontrol.com/v1
+EXPO_PUBLIC_API_BASE_URL="http://challenge-front-end.bovcontrol.com/v1"
